# pychoam

./: .env.example  .gitignore  README.md  pyproject.toml
pychoam/: __init__.py  cli.py  config.py  logging_cfg.py
pychoam/broker/: ib_connector.py
pychoam/data/: bar.py  feeds.py
pychoam/engine/: backtester.py  event_loop.py  metrics.py
pychoam/strategy/: sma_crossover.py
tests/: test_sma_crossover.py
